# smoltoken

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build_publish_python.yml  build_publish_rust.yml  build_wheels.yml  test_rust.yml
.github/workflows/python/: build_publish.yml
.github/workflows/rust/: build_publish.yml
python/: Cargo.toml  pyproject.toml
python/src/: lib.rs
python/src/python/: core.py
python/src/smoltoken/: core.py
rust/: Cargo.toml
rust/src/: lib.rs
sample/: code.txt
