[package]
name = "smoltoken-py"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "_smoltoken"
crate-type = ["cdylib"]

[dependencies]
fancy-regex = "0.14.0"
rayon = "1.10.0"
rustc-hash = "2.0.0"
pyo3 = { version = "0.22.4", default-features = false, features = [
    "extension-module",
    "macros",
] }
kdam = "0.6.2"
